objects/Transaction_Log__c.object
<CustomObject>
    <description>This Object main objective is to store the Error if there is any while processing the server request.</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Trigger/Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Log__c</fullName>
        <label>Error Log</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exception_Time__c</fullName>
        <label>Exception Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_year__c</fullName>
        <formula>TEXT(YEAR(TODAY() ) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <label>Process Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Transaction Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Process_Name__c</columns>
        <columns>Exception_Time__c</columns>
        <columns>Class_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{DD}-{MM}-{YYYY}-{0}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>